--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "pg": "^7.4.3",
+    "sequelize": "^4.39.0"
   },
   "devDependencies": {}
 }
