--- a/package.json
+++ b/package.json
@@ -5,20 +5,33 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./server/"
+    "start": "nodemon ./server/",
+    "build": "webpack -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
-    "sequelize": "^4.39.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "sequelize": "^4.39.0",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.20.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-cli": "^3.1.1"
+  }
 }
