--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
@@ -33,6 +34,6 @@
     "webpack": "^4.20.2"
   },
   "devDependencies": {
-    "webpack-cli": "^3.1.1"
+    "webpack-cli": "^3.1.2"
   }
 }
